sdks/sheetflow-java-api/src/sheetflow-syntax/src/main/java/sheetflow/syntax/ExprParser.java
// Generated from /Users/songyi/summer/sheetflow/sdks/sheetflow-java-api/src/sheetflow-syntax/src/main/resources/Expr.g4 by ANTLR 4.9.2
package sheetflow.syntax;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class ExprParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, DATETIME=8, DATEFORMAT=9, 
		MATCH=10, SUM=11, SUMIF=12, IF=13, TIMESTAMP=14, HOUR=15, MINUTE=16, DAILY=17, 
		MONTHLY=18, COUNT=19, DISTINCTCOUNT=20, COUNTIF=21, DISTINCTCOUNTIF=22, 
		FINDALL=23, DATE=24, NOW=25, INDICATOR=26, CONCAT=27, FLOOR=28, CEIL=29, 
		FORM=30, VALUE=31, LABEL=32, SUBMITTIME=33, SUBMITUSER=34, INTSTOFLOAT=35, 
		DINT=36, SQUAREWAVE=37, RANDOM=38, QUARTILEIF=39, PICK=40, MOD=41, FIND=42, 
		MAX=43, MIN=44, MAXIF=45, MINIF=46, LEFT=47, RIGHT=48, DAYOFWEEK=49, VALUEAT=50, 
		STDEVS=51, STDEVSIF=52, UPPER=53, LOWER=54, TRIM=55, TEXT=56, MID=57, 
		LEN=58, CONTAINS=59, MATH_BIT=60, MATH_NORMSDIST=61, POWER=62, TIMESPAN=63, 
		REPLACE=64, REPLACEALL=65, CRYPT_MD5=66, TIME_TS=67, SUBMITUSERID=68, 
		SUBMITUSERACCOUNT=69, IND_SUM=70, JSON_SELECT=71, XLOOKUP=72, XSUMIF=73, 
		XCOUNTIF=74, NULL=75, TRUE=76, FALSE=77, INDEX=78, AND=79, OR=80, MUL=81, 
		DIV=82, ADD=83, SUB=84, GT=85, GTE=86, LT=87, LTE=88, EQ=89, NEQ=90, INT=91, 
		DOUBLE=92, ID=93, ARG=94, STRING=95, WS=96;
	public static final int
		RULE_expr = 0, RULE_valueExpr = 1, RULE_nestedValueExpr = 2, RULE_conditionExpr = 3, 
		RULE_filterOnlyCondExp = 4, RULE_valueArg = 5, RULE_conditionFunc = 6, 
		RULE_contains = 7, RULE_intExpr = 8, RULE_transtion = 9, RULE_valueFunc = 10, 
		RULE_indexSearchFunc = 11, RULE_indexExpr = 12, RULE_sequence = 13, RULE_range = 14, 
		RULE_sequenceRef = 15, RULE_condition = 16, RULE_now = 17, RULE_timestamp = 18, 
		RULE_hour = 19, RULE_minute = 20, RULE_daily = 21, RULE_monthly = 22, 
		RULE_date = 23, RULE_datetime = 24, RULE_dateformat = 25, RULE_dayofweek = 26, 
		RULE_valueAt = 27, RULE_concat = 28, RULE_pick = 29, RULE_left = 30, RULE_right = 31, 
		RULE_upper = 32, RULE_lower = 33, RULE_trim = 34, RULE_replace = 35, RULE_replaceAll = 36, 
		RULE_text = 37, RULE_mid = 38, RULE_len = 39, RULE_distinctcount = 40, 
		RULE_countif = 41, RULE_distinctcountif = 42, RULE_match = 43, RULE_sum = 44, 
		RULE_sumif = 45, RULE_count = 46, RULE_find = 47, RULE_max = 48, RULE_min = 49, 
		RULE_minif = 50, RULE_maxif = 51, RULE_stdevs = 52, RULE_stdevsif = 53, 
		RULE_quartileif = 54, RULE_xlookup = 55, RULE_xsumif = 56, RULE_xcountif = 57, 
		RULE_cryptMd5 = 58, RULE_mod = 59, RULE_squarewave = 60, RULE_random = 61, 
		RULE_intsToFloat = 62, RULE_power = 63, RULE_minusInt = 64, RULE_minusDouble = 65, 
		RULE_dint = 66, RULE_floor = 67, RULE_ceil = 68, RULE_mathBit = 69, RULE_mathNormsdist = 70, 
		RULE_constant = 71, RULE_numberConst = 72, RULE_boolConst = 73;
	private static String[] makeRuleNames() {
		return new String[] {
			"expr", "valueExpr", "nestedValueExpr", "conditionExpr", "filterOnlyCondExp", 
			"valueArg", "conditionFunc", "contains", "intExpr", "transtion", "valueFunc", 
			"indexSearchFunc", "indexExpr", "sequence", "range", "sequenceRef", "condition", 
			"now", "timestamp", "hour", "minute", "daily", "monthly", "date", "datetime", 
			"dateformat", "dayofweek", "valueAt", "concat", "pick", "left", "right", 
			"upper", "lower", "trim", "replace", "replaceAll", "text", "mid", "len", 
			"distinctcount", "countif", "distinctcountif", "match", "sum", "sumif", 
			"count", "find", "max", "min", "minif", "maxif", "stdevs", "stdevsif", 
			"quartileif", "xlookup", "xsumif", "xcountif", "cryptMd5", "mod", "squarewave", 
			"random", "intsToFloat", "power", "minusInt", "minusDouble", "dint", 
			"floor", "ceil", "mathBit", "mathNormsdist", "constant", "numberConst", 
			"boolConst"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'['", "'..'", "']'", "':'", null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, "'*'", "'/'", 
			"'+'", "'-'", "'>'", "'>='", "'<'", "'<='", "'='", "'<>'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, "DATETIME", "DATEFORMAT", 
			"MATCH", "SUM", "SUMIF", "IF", "TIMESTAMP", "HOUR", "MINUTE", "DAILY", 
			"MONTHLY", "COUNT", "DISTINCTCOUNT", "COUNTIF", "DISTINCTCOUNTIF", "FINDALL", 
			"DATE", "NOW", "INDICATOR", "CONCAT", "FLOOR", "CEIL", "FORM", "VALUE", 
			"LABEL", "SUBMITTIME", "SUBMITUSER", "INTSTOFLOAT", "DINT", "SQUAREWAVE", 
			"RANDOM", "QUARTILEIF", "PICK", "MOD", "FIND", "MAX", "MIN", "MAXIF", 
			"MINIF", "LEFT", "RIGHT", "DAYOFWEEK", "VALUEAT", "STDEVS", "STDEVSIF", 
			"UPPER", "LOWER", "TRIM", "TEXT", "MID", "LEN", "CONTAINS", "MATH_BIT", 
			"MATH_NORMSDIST", "POWER", "TIMESPAN", "REPLACE", "REPLACEALL", "CRYPT_MD5", 
			"TIME_TS", "SUBMITUSERID", "SUBMITUSERACCOUNT", "IND_SUM", "JSON_SELECT", 
			"XLOOKUP", "XSUMIF", "XCOUNTIF", "NULL", "TRUE", "FALSE", "INDEX", "AND", 
			"OR", "MUL", "DIV", "ADD", "SUB", "GT", "GTE", "LT", "LTE", "EQ", "NEQ", 
			"INT", "DOUBLE", "ID", "ARG", "STRING", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Expr.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public ExprParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExprContext extends ParserRuleContext {
		public ValueExprContext valueExpr() {
			return getRuleContext(ValueExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			valueExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ValueExprContext extends ParserRuleContext {
		public NestedValueExprContext nestedValueExpr() {
			return getRuleContext(NestedValueExprContext.class,0);
		}
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public ValueExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_valueExpr; }
	}

	public final ValueExprContext valueExpr() throws RecognitionException {
		ValueExprContext _localctx = new ValueExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_valueExpr);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(150);
				nestedValueExpr(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(151);
				conditionExpr(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NestedValueExprContext extends ParserRuleContext {
		public NestedValueExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_nestedValueExpr; }
	 
		public NestedValueExprContext() { }
		public void copyFrom(NestedValueExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ParensContext extends NestedValueExprContext {
		public NestedValueExprContext nestedValueExpr() {
			return getRuleContext(NestedValueExprContext.class,0);
		}
		public ParensContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class TranstionerContext extends NestedValueExprContext {
		public TranstionContext transtion() {
			return getRuleContext(TranstionContext.class,0);
		}
		public TranstionerContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class GetByIndexContext extends NestedValueExprContext {
		public SequenceRefContext sequenceRef() {
			return getRuleContext(SequenceRefContext.class,0);
		}
		public GetByIndexContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionContext extends NestedValueExprContext {
		public ValueFuncContext valueFunc() {
			return getRuleContext(ValueFuncContext.class,0);
		}
		public FunctionContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class GetByConstContext extends NestedValueExprContext {
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public GetByConstContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class GetByConditionFunContext extends NestedValueExprContext {
		public ConditionFuncContext conditionFunc() {
			return getRuleContext(ConditionFuncContext.class,0);
		}
		public GetByConditionFunContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class AddSubContext extends NestedValueExprContext {
		public Token op;
		public List<NestedValueExprContext> nestedValueExpr() {
			return getRuleContexts(NestedValueExprContext.class);
		}
		public NestedValueExprContext nestedValueExpr(int i) {
			return getRuleContext(NestedValueExprContext.class,i);
		}
		public TerminalNode ADD() { return getToken(ExprParser.ADD, 0); }
		public TerminalNode SUB() { return getToken(ExprParser.SUB, 0); }
		public AddSubContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}
	public static class MulDivContext extends NestedValueExprContext {
		public Token op;
		public List<NestedValueExprContext> nestedValueExpr() {
			return getRuleContexts(NestedValueExprContext.class);
		}
		public NestedValueExprContext nestedValueExpr(int i) {
			return getRuleContext(NestedValueExprContext.class,i);
		}
		public TerminalNode MUL() { return getToken(ExprParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(ExprParser.DIV, 0); }
		public MulDivContext(NestedValueExprContext ctx) { copyFrom(ctx); }
	}

	public final NestedValueExprContext nestedValueExpr() throws RecognitionException {
		return nestedValueExpr(0);
	}

	private NestedValueExprContext nestedValueExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		NestedValueExprContext _localctx = new NestedValueExprContext(_ctx, _parentState);
		NestedValueExprContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_nestedValueExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				{
				_localctx = new GetByIndexContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(155);
				sequenceRef();
				}
				break;
			case 2:
				{
				_localctx = new GetByConstContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(156);
				constant();
				}
				break;
			case 3:
				{
				_localctx = new FunctionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(157);
				valueFunc();
				}
				break;
			case 4:
				{
				_localctx = new TranstionerContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(158);
				transtion();
				}
				break;
			case 5:
				{
				_localctx = new GetByConditionFunContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(159);
				conditionFunc();
				}
				break;
			case 6:
				{
				_localctx = new ParensContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(160);
				match(T__0);
				setState(161);
				nestedValueExpr(0);
				setState(162);
				match(T__1);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(174);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(172);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new MulDivContext(new NestedValueExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_nestedValueExpr);
						setState(166);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(167);
						((MulDivContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==MUL || _la==DIV) ) {
							((MulDivContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(168);
						nestedValueExpr(9);
						}
						break;
					case 2:
						{
						_localctx = new AddSubContext(new NestedValueExprContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_nestedValueExpr);
						setState(169);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(170);
						((AddSubContext)_localctx).op = _input.LT(1);
						_la = _input.LA(1);
						if ( !(_la==ADD || _la==SUB) ) {
							((AddSubContext)_localctx).op = (Token)_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(171);
						nestedValueExpr(8);
						}
						break;
					}
					} 
				}
				setState(176);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConditionExprContext extends ParserRuleContext {
		public ConditionExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionExpr; }
	 
		public ConditionExprContext() { }
		public void copyFrom(ConditionExprContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrioritisedConditionContext extends ConditionExprContext {
		public ConditionExprContext conditionExpr() {
			return getRuleContext(ConditionExprContext.class,0);
		}
		public PrioritisedConditionContext(ConditionExprContext ctx) { copyFrom(ctx); }
	}
	public static class CheckConditionBoolConstContext extends ConditionExprContext {
		public BoolConstContext boolConst() {
			return getRuleContext(BoolConstContext.class,0);
		}
		public CheckConditionBoolConstContext(ConditionExprContext ctx) { copyFrom(ctx); }
	}
	public static class CheckConditionContext extends ConditionExprContext {
		public Token op;
		public List<NestedValueExprContext> nestedValueExpr() {
			return getRuleContexts(NestedValueExprContext.class);
		}
		public NestedValueExprContext nestedValueExpr(int i) {
			return getRuleContext(NestedValueExprContext.class,i);
		}
		public TerminalNode LT() { return getToken(ExprParser.LT, 0); }
		public TerminalNode GT() { return getToken(ExprParser.GT, 0); }
		public TerminalNode EQ() { return getToken(ExprParser.EQ, 0); }
		public TerminalNode NEQ() { return getToken(ExprParser.NEQ, 0); }
		public TerminalNode LTE() { return getToken(ExprParser.LTE, 0); }
		public TerminalNode GTE() { return getToken(ExprParser.GTE, 0); }
		public CheckConditionContext(ConditionExprContext ctx) { copyFrom(ctx); }
	}
	public static class CheckConditionFuncContext extends ConditionExprContext {
		public ConditionFuncContext conditionFunc() {
			return getRuleContext(ConditionFuncContext.class,0);
		}
		public CheckConditionFuncContext(ConditionExprContext ctx) { copyFrom(ctx); }
	}
	public static class CheckNestedConditionContext extends ConditionExprContext {
		public Token op;
		public List<ConditionExprContext> conditionExpr() {
			return getRuleContexts(ConditionExprContext.class);
		}
		public ConditionExprContext conditionExpr(int i) {
			return getRuleContext(ConditionExprContext.class,i);
		}
		public TerminalNode AND() { return getToken(ExprParser.AND, 0); }
		public TerminalNode OR() { return getToken(ExprParser.OR, 0); }
		public CheckNestedConditionContext(ConditionExprContext ctx) { copyFrom(ctx); }
	}

	public final ConditionExprContext conditionExpr() throws RecognitionException {
		return conditionExpr(0);
	}

	private ConditionExprContext conditionExpr(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionExprContext _localctx = new ConditionExprContext(_ctx, _parentState);
		ConditionExprContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_conditionExpr, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				_localctx = new PrioritisedConditionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
